--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="title_notifications">Notifications</string>
     <string name="todo_title_hint">ToDo name</string>
     <string name="description_hint">Input description here...</string>
+    <string name="todo_list_loading_error">Error occurs while todos loading</string>
 </resources>
