--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
     <string name="create_button_label">Create</string>
     <string name="rename_button_label">Rename</string>
     <string name="category_name_hint">Input category name</string>
+
+    <string name="category">Category</string>
 </resources>
