--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="create_new_category">Create new category</string>
     <string name="clear_done_todos">Clear done tasks</string>
     <!--  -->
+    <string name="delete_button_label">Delete</string>
     <string name="cancel_button_label">Cancel</string>
     <string name="create_button_label">Create</string>
     <string name="rename_button_label">Rename</string>
